offline-3/examples/c/reccalc/parse.output
Grammar

    0 $accept: input "end-of-file"

    1 input: line
    2      | input line

    3 line: exp eol
    4     | error eol

    5 eol: "end-of-file"
    6    | "end-of-line"

    7 exp: "number"
    8    | exp "+" exp
    9    | exp "-" exp
   10    | exp "*" exp
   11    | exp "/" exp
   12    | "+" exp
   13    | "-" exp
   14    | "string"


Terminals, with rules where they appear

    "end-of-file" (0) 0 5
    error (256) 4
    "+" (258) 8 12
    "-" (259) 9 13
    "*" (260) 10
    "/" (261) 11
    "end-of-line" (262) 6
    "number" <int> (263) 7
    "string" <char*> (264) 14
    UNARY (265)


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    input (12)
        on left: 1 2
        on right: 0 2
    line (13)
        on left: 3 4
        on right: 1 2
    eol (14)
        on left: 5 6
        on right: 3 4
    exp <int> (15)
        on left: 7 8 9 10 11 12 13 14
        on right: 3 8 9 10 11 12 13


State 0

    0 $accept: • input "end-of-file"

    error     shift, and go to state 1
    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "number"  shift, and go to state 4
    "string"  shift, and go to state 5

    input  go to state 6
    line   go to state 7
    exp    go to state 8


State 1

    4 line: error • eol

    "end-of-file"  shift, and go to state 9
    "end-of-line"  shift, and go to state 10

    eol  go to state 11


State 2

   12 exp: "+" • exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "number"  shift, and go to state 4
    "string"  shift, and go to state 5

    exp  go to state 12


State 3

   13 exp: "-" • exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "number"  shift, and go to state 4
    "string"  shift, and go to state 5

    exp  go to state 13


State 4

    7 exp: "number" •

    $default  reduce using rule 7 (exp)


State 5

   14 exp: "string" •

    $default  reduce using rule 14 (exp)


State 6

    0 $accept: input • "end-of-file"
    2 input: input • line

    "end-of-file"  shift, and go to state 14
    error          shift, and go to state 1
    "+"            shift, and go to state 2
    "-"            shift, and go to state 3
    "number"       shift, and go to state 4
    "string"       shift, and go to state 5

    line  go to state 15
    exp   go to state 8


State 7

    1 input: line •

    $default  reduce using rule 1 (input)


State 8

    3 line: exp • eol
    8 exp: exp • "+" exp
    9    | exp • "-" exp
   10    | exp • "*" exp
   11    | exp • "/" exp

    "end-of-file"  shift, and go to state 9
    "+"            shift, and go to state 16
    "-"            shift, and go to state 17
    "*"            shift, and go to state 18
    "/"            shift, and go to state 19
    "end-of-line"  shift, and go to state 10

    eol  go to state 20


State 9

    5 eol: "end-of-file" •

    $default  reduce using rule 5 (eol)


State 10

    6 eol: "end-of-line" •

    $default  reduce using rule 6 (eol)


State 11

    4 line: error eol •

    $default  reduce using rule 4 (line)


State 12

    8 exp: exp • "+" exp
    9    | exp • "-" exp
   10    | exp • "*" exp
   11    | exp • "/" exp
   12    | "+" exp •

    $default  reduce using rule 12 (exp)


State 13

    8 exp: exp • "+" exp
    9    | exp • "-" exp
   10    | exp • "*" exp
   11    | exp • "/" exp
   13    | "-" exp •

    $default  reduce using rule 13 (exp)


State 14

    0 $accept: input "end-of-file" •

    $default  accept


State 15

    2 input: input line •

    $default  reduce using rule 2 (input)


State 16

    8 exp: exp "+" • exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "number"  shift, and go to state 4
    "string"  shift, and go to state 5

    exp  go to state 21


State 17

    9 exp: exp "-" • exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "number"  shift, and go to state 4
    "string"  shift, and go to state 5

    exp  go to state 22


State 18

   10 exp: exp "*" • exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "number"  shift, and go to state 4
    "string"  shift, and go to state 5

    exp  go to state 23


State 19

   11 exp: exp "/" • exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "number"  shift, and go to state 4
    "string"  shift, and go to state 5

    exp  go to state 24


State 20

    3 line: exp eol •

    $default  reduce using rule 3 (line)


State 21

    8 exp: exp • "+" exp
    8    | exp "+" exp •
    9    | exp • "-" exp
   10    | exp • "*" exp
   11    | exp • "/" exp

    "*"  shift, and go to state 18
    "/"  shift, and go to state 19

    $default  reduce using rule 8 (exp)


State 22

    8 exp: exp • "+" exp
    9    | exp • "-" exp
    9    | exp "-" exp •
   10    | exp • "*" exp
   11    | exp • "/" exp

    "*"  shift, and go to state 18
    "/"  shift, and go to state 19

    $default  reduce using rule 9 (exp)


State 23

    8 exp: exp • "+" exp
    9    | exp • "-" exp
   10    | exp • "*" exp
   10    | exp "*" exp •
   11    | exp • "/" exp

    $default  reduce using rule 10 (exp)


State 24

    8 exp: exp • "+" exp
    9    | exp • "-" exp
   10    | exp • "*" exp
   11    | exp • "/" exp
   11    | exp "/" exp •

    $default  reduce using rule 11 (exp)
